# tektite

./: .clang-format  .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  README.md  project.ogmo
.github/workflows/: cmake-multi-platform.yml
assets/: message.json
assets/entities/: flying.lua  player.lua  shared.lua  solid.lua
assets/fonts/: consolas.fnt  normal_font.fnt
assets/maps/: castle_floor_0.json  entity.json  map.tiled-project  map.tiled-session  test_map.json
assets/scripts/: init.lua  player.lua  test.lua
assets/textures/: textures.atlas
core/: CMakeLists.txt
core/include/core/: common.hpp  engine.hpp  input.hpp
core/include/core/audio/: audio.hpp
core/include/core/engine/: engine.hpp
core/include/core/graphics/: camera.hpp  font.hpp  graphics.hpp  texture.hpp
core/include/core/input/: input.hpp
core/include/core/script/: script.hpp
core/include/core/world/: entity.hpp  tilemap.hpp  world.hpp
core/source/: engine.cpp  input.cpp
core/source/audio/: audio.cpp
core/source/engine/: engine.cpp
core/source/graphics/: camera.cpp  font.cpp  graphics.cpp  texture.cpp
core/source/input/: input.cpp
core/source/script/: script.cpp
core/source/script/module/: audio_module.cpp  graphics_module.cpp  input_module.cpp  world_module.cpp
core/source/script/object/: entity_object.cpp  font_object.cpp  texture_object.cpp
core/source/world/: entity.cpp  tilemap.cpp  world.cpp
engine/: CMakeLists.txt
engine/include/engine/: audio.hpp  engine.hpp  graphics.hpp  input.hpp  script.hpp  time.hpp  world.hpp
engine/include/engine/audio/: audio_engine.hpp
engine/include/engine/graphics/: camera.hpp  font.hpp  graphics.hpp  texture.hpp
engine/include/engine/input/: input_system.hpp
engine/include/engine/script/: script_engine.hpp
engine/include/engine/world/: entity.hpp  tilemap.hpp  world.hpp
engine/source/: audio.cpp  engine.cpp  graphics.cpp  input.cpp  script.cpp  world.cpp
engine/source/audio/: audio_engine.cpp
engine/source/graphics/: camera.cpp  font.cpp  graphics.cpp  texture.cpp
engine/source/input/: input_system.cpp
engine/source/modules/: audio.cpp  graphics.cpp  input.cpp  world.cpp
engine/source/objects/: entity.cpp  font.cpp  texture.cpp
engine/source/script/: script_engine.cpp
engine/source/script/module/: audio_module.cpp  graphics_module.cpp  input_module.cpp  world_module.cpp
engine/source/script/object/: entity_object.cpp  font_object.cpp  texture_object.cpp
engine/source/world/: entity.cpp  tilemap.cpp  world.cpp
extras/examples/game/: .gitignore  README.md
extras/examples/game/assets/entities/: field.lua  help.lua  player.lua  shared.lua  tagged.lua
extras/examples/game/assets/fonts/: big_font.fnt
extras/examples/game/assets/maps/: map.tiled-session
extras/modules/: _input.lua  _world.lua
module/: _audio.lua  _graphics.lua  _input.lua  _world.lua
runtime/: CMakeLists.txt
runtime/desktop/: CMakeLists.txt  win32_resources.rc  windows_resources.rc
runtime/desktop/source/: main.cpp
runtime/emscripten/: CMakeLists.txt  index.html  launch_server.py
runtime/emscripten/source/: main.cpp
runtime/windows/: CMakeLists.txt  resources.rc
runtime/windows/source/: main.cpp
